--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+t<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -152,7 +152,7 @@
       <div class="projects-container">
         <!-- Project 1 -->
         <div class="project-card">
-          <img src="Screenshot 2024-12-15 at 4.33.08 PM.png" alt="Project 1" />
+          <img src="Project1.png" alt="Project 1" />
           <div class="project-info">
             <h3>Project Learnlink</h3>
             <p>
@@ -167,7 +167,7 @@
         </div>
         <!-- Project 2 -->
         <div class="project-card">
-          <img src="Screenshot 2024-12-15 at 4.32.34 PM.png" alt="Project 2" />
+          <img src="Project2.jpg" alt="Project 2" />
           <div class="project-info">
             <h3>Project Qurace</h3>
             <p>
